--- a/src/main/webapp/app/music/music.component.scss
+++ b/src/main/webapp/app/music/music.component.scss
@@ -6,6 +6,10 @@
   margin: auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
 /* The slider itself */
 .slider {
   -webkit-appearance: none; /* Override default CSS styles */
