--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -135,13 +135,12 @@
                                     </div>
                                 </div>
                                 <br><br>
-                                <div class="table-responsive" *ngIf="usersComments?.length > 0">
-                                    <div *ngFor="let comment of usersComments">
+                                <div class="table-responsive" *ngIf="usersComments?.length > 0 && commentsAvatars">
+                                    <div *ngFor="let comment of usersComments; let i = index" [attr.data-index]="i">
                                         <div class="row mb-2">
                                             <div class="col-md-3">
-                                                <!--<img [src]="userService.downloadAvatar(comment.user.login)" *ngIf="!isImageLoading && hasImage"
-                                                     class="d-block ui-w-60 rounded-circle" alt="">-->
-                                                <!--<img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">-->
+                                                <img [src]="commentsAvatars[i]"
+                                                     class="d-block ui-w-60 rounded-circle" alt="">
                                                 <a [routerLink]="['/', comment.user.login, 'view']">{{comment.user?.login}}</a>
                                                 <div class="text-muted small">{{comment.date | date:'medium'}}</div>
                                             </div>
@@ -166,26 +165,41 @@
                                                 </div>
                                             </div>
                                         </div>
-<!--                                        <div class="media mb-4">-->
-<!--                                            <div class="media-heading">-->
-<!--                                                &lt;!&ndash;<img [src]="userService.downloadAvatar(comment.user.login)" *ngIf="!isImageLoading && hasImage"-->
-<!--                                                     class="d-block ui-w-60 rounded-circle" alt="">&ndash;&gt;-->
-<!--                                                &lt;!&ndash;<img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">&ndash;&gt;-->
-<!--                                                <a [routerLink]="['/', comment.user.login, 'view']">{{comment.user?.login}}</a>-->
-<!--                                                <div class="text-muted small">{{comment.date | date:'medium'}}</div>-->
-<!--                                            </div>-->
-<!--                                            <div class="media-body">{{comment.textContent}}</div>-->
-<!--                                            <button type="submit"-->
-<!--                                                    [routerLink]="['/comment', comment.id, 'edit']"-->
-<!--                                                    class="btn btn-primary btn-sm"-->
-<!--                                                    [disabled]="currentUser.login === comment.user.login">-->
-<!--                                                <fa-icon [icon]="'pencil-alt'"></fa-icon>-->
-<!--                                                <span class="d-none d-md-inline"-->
-<!--                                                      jhiTranslate="entity.action.edit">Edit</span>-->
-<!--                                            </button>-->
-<!--                                        </div>-->
                                     </div>
                                 </div>
+<!--                                <div class="table-responsive" *ngIf="usersComments?.length > 0">
+                                    <div *ngFor="let comment of usersComments">
+                                        <div class="row mb-2">
+                                            <div class="col-md-3">
+                                                &lt;!&ndash;<img [src]="userService.downloadAvatar(comment.user.login)" *ngIf="!isImageLoading && hasImage"
+                                                     class="d-block ui-w-60 rounded-circle" alt="">&ndash;&gt;
+                                                &lt;!&ndash;<img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">&ndash;&gt;
+                                                <a [routerLink]="['/', comment.user.login, 'view']">{{comment.user?.login}}</a>
+                                                <div class="text-muted small">{{comment.date | date:'medium'}}</div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <span>{{comment.textContent}}</span>
+                                            </div>
+                                            <div *ngIf="currentUser" class="col-md-3">
+                                                <div [hidden]="currentUser.login !== comment.user.login">
+                                                    <button type="submit"
+                                                            [routerLink]="['/comment', comment.id, 'edit']"
+                                                            class="btn btn-primary btn-sm">
+                                                        <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                                        <span class="d-none d-md-inline"
+                                                              jhiTranslate="entity.action.edit">Edit</span>
+                                                    </button>
+                                                    <button type="submit" (click)="deleteComment(comment)"
+                                                            class="btn btn-danger btn-sm">
+                                                        <fa-icon [icon]="'times'"></fa-icon>
+                                                        <span class="d-none d-md-inline"
+                                                              jhiTranslate="entity.action.delete">Delete</span>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
