--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -53,7 +53,7 @@ Main page styles
   background-size: cover;
 }
 .ui-rect {
-  padding-top: 50% !important;
+  // padding-top: 50% !important;
 }
 .ui-rect,
 .ui-rect-30,
@@ -62,8 +62,12 @@ Main page styles
 .ui-rect-75 {
   position: relative !important;
   display: block !important;
-  padding-top: 100% !important;
+  // padding-top: 100% !important;
   width: 100% !important;
+  margin: auto;
+}
+
+.center {
   margin: auto;
 }
 //.d-flex, .d-inline-flex, .media, .media>:not(.media-body), .jumbotron, .card {
@@ -98,6 +102,35 @@ Main page styles
 .ui-w-60 {
   width: 60px !important;
   height: auto;
+}
+
+.post-window {
+  border-radius: 10px;
+  border: 2px solid #522b72;
+  background-color: #ffffff;
+  // max-width: 600px;
+  min-height: 500px;
+  min-width: 350px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #000000;
+  // margin-top: 20px;
+  margin: auto; // środkowanie
+}
+
+.comment-card {
+  border-radius: 10px;
+  border: 2px solid #522b72;
+  background-color: #ffffff;
+  width: 500px;
+  min-width: 200px;
+  max-width: 600px;
+  // min-width: 200px;
+  color: #000000;
+  // margin-top: 20px;
+  margin: auto; // środkowanie
 }
 
 .card {
