--- a/src/main/webapp/app/music/music.component.html
+++ b/src/main/webapp/app/music/music.component.html
@@ -1,22 +1,24 @@
-<div [ngSwitch]="likedAudioDisplayed">
-    <h2 *ngSwitchCase="true">
-        <span id="likedFiles-page-heading">Liked audio files</span>
-        <button class="btn btn-primary float-right" (click)="loadUserFiles()">
-            <fa-icon [icon]="'music'"></fa-icon>
-            <span>Show my audio files</span>
-        </button>
-    </h2>
-    <h2 *ngSwitchCase="false">
-        <span id="myFiles-page-heading">My audio files</span>
-        <button class="btn btn-primary float-right" (click)="loadLikedFiles()">
-            <fa-icon [icon]="'music'"></fa-icon>
-            <span>Show liked audio files</span>
-        </button>
-    </h2>
+<div class="content" [ngSwitch]="likedAudioDisplayed">
+    <div class="row">
+        <h2 class="col-md-6 center" *ngSwitchCase="true">
+            <span id="likedFiles-page-heading">Liked audio files</span>
+            <button class="btn btn-primary float-right" (click)="loadUserFiles()">
+                <fa-icon [icon]="'music'"></fa-icon>
+                <span>Show my audio files</span>
+            </button>
+        </h2>
+        <h2 class="col-md-6 center" *ngSwitchCase="false">
+            <span id="myFiles-page-heading">My audio files</span>
+            <button class="btn btn-primary float-right" (click)="loadLikedFiles()">
+                <fa-icon [icon]="'music'"></fa-icon>
+                <span>Show liked audio files</span>
+            </button>
+        </h2>
+    </div>
     <jhi-alert-error></jhi-alert-error>
     <jhi-alert></jhi-alert>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-8 center">
             <form name="searchForm" class="form-inline">
                 <div class="input-group w-100 mt-3">
                     <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch"
@@ -35,34 +37,31 @@
     <div class="alert alert-warning" *ngIf="audioFiles?.length === 0">
         <span jhiTranslate="soundgramApp.audioFile.home.notFound">No audioFiles found</span>
     </div>
-    <div class="table-responsive" *ngIf="audioFiles?.length > 0">
+    <div class="table-responsive table-window" *ngIf="audioFiles?.length > 0">
         <table class="table table-striped" aria-describedby="page-heading">
             <thead>
             <tr>
-                <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-                <th scope="col"><span jhiTranslate="soundgramApp.audioFile.audioPath">Audio Path</span></th>
-                <th scope="col"><span jhiTranslate="soundgramApp.audioFile.title">Title</span></th>
-                <th scope="col"><span jhiTranslate="soundgramApp.audioFile.iconPath">Icon Path</span></th>
-                <th scope="col"><span jhiTranslate="soundgramApp.audioFile.post">Post</span></th>
-                <th scope="col"><span jhiTranslate="soundgramApp.audioFile.user">User</span></th>
+                <th scope="col"><span>Title</span></th>
+                <th class="narrow-hide" scope="col"><span>Owner</span></th>
+                <th class="narrow-hide" scope="col"><span>Post</span></th>
+                <th class="narrow-hide" scope="col"><span>Likes</span></th>
                 <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let audioFile of audioFiles ;trackBy: trackId">
-                <td><a [routerLink]="['/audio-file', audioFile.id, 'view' ]">{{audioFile.id}}</a></td>
-                <td>{{audioFile.audioPath}}</td>
                 <td>{{audioFile.title}}</td>
-                <td>{{audioFile.iconPath}}</td>
-                <td>
-                    <div *ngIf="audioFile.post">
-                        <a [routerLink]="['/post', audioFile.post?.id, 'view' ]">{{audioFile.post?.id}}</a>
-                    </div>
+                <td class="narrow-hide"><a [routerLink]="['/', audioFile.post.user.login, 'view']">{{audioFile.post.user.login}}</a></td>
+                <td class="narrow-hide">
+                    <button type="submit"
+                            [routerLink]="['/post', audioFile.post?.id, 'view' ]"
+                            class="btn btn-info btn-sm">
+                        <fa-icon [icon]="'eye'"></fa-icon>
+                        <span class="d-none d-md-inline" >View post</span>
+                    </button>
                 </td>
-                <td>
-                    <span *ngFor="let user of audioFile.users; let last = last">
-                        <a [routerLink]="['/', user.login, 'view']">{{user.login}}{{last ? '' : ', '}}</a>
-                        </span>
+                <td class="narrow-hide">
+                    <span>{{audioFile.users.length}} <fa-icon [icon]="'star'"></fa-icon></span>
                 </td>
                 <td class="text-right">
                     <div class="btn-group">
@@ -85,7 +84,7 @@
     </div>
 </div>
 <br>
-<div class="media-footer">
+<div class="media-footer player">
     <div *ngIf="audioFiles" class="container">
         <div class="row slidecontainer">
             <div class="col-md-12" style="text-align: center">
