--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -1,76 +1,48 @@
 <div class="row justify-content-center">
-    <div class="col-8">
-
-        <h2 id="page-heading">
-            <!--<span jhiTranslate="home.name">Posts</span>-->
-            <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-post"
-                    [routerLink]="['/post/new']">
-                <fa-icon [icon]="'plus'"></fa-icon>
-                <span class="hidden-sm-down" jhiTranslate="soundgramApp.post.home.createLabel">
+    <div class="col-md-8 profile-window">
+        <div class="row col-md-12">
+            <div class="row col-md-8 center">
+                <img [src]="avatar"
+                     alt="Place image title"
+                     *ngIf="!isImageLoading && hasImage" class="center profile-image rounded-circle"
+                     style="max-width:120px;width:100%;max-height:120px;height:100%">
+                <h2 class="center"><b>{{user.login}}</b></h2>
+            </div>
+            <div class="col-md-4 center">
+                <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-post"
+                        [routerLink]="['/post/new']">
+                    <fa-icon [icon]="'plus'"></fa-icon>
+                    <span class="hidden-sm-down" jhiTranslate="soundgramApp.post.home.createLabel">
                         Create a new Post
                     </span>
-            </button>
-        </h2>
-
-        <h2>
-            <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]
-            <img [src]="avatar"
-                 alt="Place image title"
-                 *ngIf="!isImageLoading && hasImage; else noImageFound" class="profile-image rounded-circle"
-                 style="max-width:80px;width:100%;max-height:80px;height:100%">
-            <ng-template #noImageFound>
-                <span>No avatar found!</span>
-            </ng-template>
-        </h2>
-        <dl class="row-md jh-entity-details">
-            <dt><span jhiTranslate="userManagement.login">Login</span></dt>
-            <dd>{{user?.login}}</dd>
-            <!--                <dd>-->
-            <!--                    <span>{{user.login}}</span>-->
-            <!--                    <jhi-boolean-->
-            <!--                        [value]="user.activated"-->
-            <!--                        [textTrue]="'userManagement.activated' | translate"-->
-            <!--                        [textFalse]="'userManagement.deactivated' | translate">-->
-            <!--                    </jhi-boolean>-->
-            <!--                </dd>-->
-            <dt><span jhiTranslate="userManagement.firstName">First Name</span></dt>
-            <dd>{{user?.firstName}}</dd>
-            <dt><span jhiTranslate="userManagement.lastName">Last Name</span></dt>
-            <dd>{{user?.lastName}}</dd>
-            <dt><span jhiTranslate="userManagement.email">Email</span></dt>
-            <dd>{{user?.email}}</dd>
-            <dt><span jhiTranslate="userManagement.langKey">Lang Key</span></dt>
-            <dd>{{user?.langKey}}</dd>
-            <!--                <dt><span jhiTranslate="userManagement.createdBy">Created By</span></dt>
-                            <dd>{{user.createdBy}}</dd>
-                            <dt><span jhiTranslate="userManagement.createdDate">Created Date</span></dt>
-                            <dd>{{user.createdDate | date:'dd/MM/yy HH:mm' }}</dd>-->
-            <!--                <dt><span jhiTranslate="userManagement.lastModifiedBy">Last Modified By</span></dt>
-                            <dd>{{user.lastModifiedBy}}</dd>
-                            <dt><span jhiTranslate="userManagement.lastModifiedDate">Last Modified Date</span></dt>
-                            <dd>{{user.lastModifiedDate | date:'dd/MM/yy HH:mm'}}</dd>
-                            <dt><span jhiTranslate="userManagement.profiles">Profiles</span></dt>
-                            <dd>
-                                <ul class="list-unstyled">
-                                    <li *ngFor="let authority of user.authorities">
-                                        <span class="badge badge-info">{{authority}}</span>
-                                    </li>
-                                </ul>
-                            </dd>-->
-        </dl>
-        <div *ngIf="userExtra">
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="soundgramApp.userExtra.userLocation">User Location</span></dt>
-                <dd>
-                    <span>{{userExtra.userLocation}}</span>
-                </dd>
-                <dt><span jhiTranslate="soundgramApp.userExtra.bio">Biography</span></dt>
-                <dd>
-                    <span>{{userExtra.bio}}</span>
-                </dd>
-            </dl>
+                </button>
+            </div>
         </div>
-        <!--"../../"-->
+        <br>
+        <dl class="row">
+            <div class="col-md-4 center">
+                <dt><span jhiTranslate="userManagement.firstName">First Name</span></dt>
+                <dd>{{user?.firstName}}</dd>
+                <dt><span jhiTranslate="userManagement.lastName">Last Name</span></dt>
+                <dd>{{user?.lastName}}</dd>
+            </div>
+            <div class="col-md-4 center">
+                <dt><span jhiTranslate="userManagement.email">Email</span></dt>
+                <dd>{{user?.email}}</dd>
+                <dt><span jhiTranslate="userManagement.langKey">Lang Key</span></dt>
+                <dd>{{user?.langKey}}</dd>
+            </div>
+            <div *ngIf="userExtra" class="col-md-4 center">
+                    <dt><span jhiTranslate="soundgramApp.userExtra.userLocation">User Location</span></dt>
+                    <dd>
+                        <span>{{userExtra.userLocation}}</span>
+                    </dd>
+                    <dt><span jhiTranslate="soundgramApp.userExtra.bio">Biography</span></dt>
+                    <dd>
+                        <span>{{userExtra.bio}}</span>
+                    </dd>
+            </div>
+        </dl>
         <button type="submit"
                 routerLink="/users"
                 class="btn btn-info">
